chore:修改一些配置

--- a/docs/mobile/package.json
+++ b/docs/mobile/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev":"vitepress dev . --open"
+    "dev":"vitepress dev . --open",
+    "build":"vitepress build ."
   },
   "devDependencies": {
     "vitepress": "^1.0.0-rc.45"
