--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -17,5 +17,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27"
+  },
+  "peerDependencies": {
+    "less": "^4.1.3"
   }
 }
