--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "pk-ui",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "组件库",
   "private": true,
   "scripts": {
     "build:mobile_docs": "pnpm -C docs/mobile run build",
     "dev:mobile_docs": "pnpm -C docs/mobile run dev",
-    "dev:demo_mobile":"pnpm -C demo/mobile run dev",
-    "dev:uni-vue3:h5":"pnpm -C packages/uni-vue3 run dev:h5",
-    "dev:uni-vue3:mp-weixin":"pnpm -C packages/uni-vue3 run dev:mp-weixin"
+    "dev:demo_mobile": "pnpm -C demo/mobile run dev",
+    "dev:uni-vue3:h5": "pnpm -C packages/uni-vue3 run dev:h5",
+    "dev:uni-vue3:mp-weixin": "pnpm -C packages/uni-vue3 run dev:mp-weixin"
   },
   "keywords": [],
-  "author": "",
+  "author": "yranky",
   "license": "MIT",
   "dependencies": {
     "@pk-ui/mobile": "workspace:^",
