🐳 chore: 新增构建脚本

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:mobile_docs": "pnpm -C docs/mobile run build",
     "dev:mobile_docs": "pnpm -C docs/mobile run dev",
+    "build:demo_mobile": "pnpm -C demo/mobile run build",
     "dev:demo_mobile": "pnpm -C demo/mobile run dev",
     "dev:uni-vue3:h5": "pnpm -C packages/uni-vue3 run dev:h5",
     "dev:uni-vue3:mp-weixin": "pnpm -C packages/uni-vue3 run dev:mp-weixin"
