--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "组件库",
   "private": true,
   "scripts": {
-    "build:mobile_docs": "pnpm -C docs/mobile run build",
-    "dev:mobile_docs": "pnpm -C docs/mobile run dev",
+    "build:mobile_docs": "pnpm -C docs/mobile run mobile:build",
+    "dev:mobile_docs": "pnpm -C docs/mobile run mobile:dev",
     "build:demo_mobile": "pnpm -C demo/mobile run build",
     "dev:demo_mobile": "pnpm -C demo/mobile run dev",
     "dev:uni-vue3:h5": "pnpm -C packages/uni-vue3 run dev:h5",
