--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "@vuepress/theme-default": "^2.0.0-rc.11",
     "vue": "^3.4.31",
     "vuepress": "^2.0.0-rc.7",
-    "@vuepress/plugin-search": "2.0.0-rc.37"
+    "@vuepress/plugin-search": "2.0.0-rc.37",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.50"
   }
 }
