--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -19,7 +19,6 @@
     "vue-tsc": "^1.8.27"
   },
   "peerDependencies": {
-    "less": "^4.1.3",
-    "@ant-design/icons-vue": "^7.0.1"
+    "less": "^4.1.3"
   }
 }
