--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -9,9 +9,6 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "vue": "^3.4.21"
-  },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
@@ -19,6 +16,7 @@
     "vue-tsc": "^1.8.27"
   },
   "peerDependencies": {
-    "less": "^4.1.3"
+    "less": "^4.1.3",
+    "vue": "^3.0.0"
   }
 }
