--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -9,6 +9,9 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "vue": "^3.0.0"
+  },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
