--- a/packages/use/package.json
+++ b/packages/use/package.json
@@ -2,6 +2,9 @@
   "name": "@pk-ui/use",
   "private": true,
   "main": "index.ts",
+  "dependencies": {
+    "vue": "^3.0.0"
+  },
   "peerDependencies": {
     "vue": "^3.0.0"
   }
