--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,6 +2,9 @@
   "name": "@pk-ui/utils",
   "private": true,
   "main": "index.ts",
+  "dependencies": {
+    "vue": "^3.0.0"
+  },
   "peerDependencies": {
     "vue": "^3.0.0",
     "dayjs": "^1.11.12"
