--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -3,7 +3,7 @@
   "description": "A mobile UI library based on Vue3",
   "private": false,
   "license": "MIT",
-  "version": "0.0.0",
+  "version": "0.0.4",
   "type": "module",
   "author": {
     "name": "yranky",
@@ -29,20 +29,22 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "publish": "npm run build && node scripts/createPackageJson.js && cd dist && npm publish --access=public"
+    "build:release": "npm run build && node scripts/createPackageJson.js"
   },
   "dependencies": {
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "dayjs": "^1.11.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27",
-    "vite-plugin-dts": "^4.2.1"
+    "vite-plugin-dts": "^4.2.1",
+    "less": "^4.1.3"
   },
   "peerDependencies": {
-    "less": "^4.1.3",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "dayjs": "^1.0.0"
   }
 }
